--- a/css/common.css
+++ b/css/common.css
@@ -1,3 +1,6 @@
+/*-----------
+    CONTAINERS
+------------*/
 
 .container{
     max-width: 71.25rem;
@@ -6,10 +9,44 @@
     margin: auto;
 }
 
+.container-2{
+    max-width: 62.5rem;
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+    margin: auto;
+}
+
+.section-container{
+    width: 100%;
+}
+
+/*-----------
+    FLEX
+------------*/
+
 .flex-box{
     display: flex;
 }
 
 .space-between{
     justify-content: space-between;
+}
+
+.row{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 -1.25rem;
+}
+
+.col{
+    padding: 0 1.25rem;
+}
+
+.col-2{
+    padding: 1.25rem 0;
+    width: 100%;
+}
+
+section:nth-child(even){
+    background-color: #9792e4;
 }
