--- a/css/common.css
+++ b/css/common.css
@@ -2,6 +2,10 @@
     CONTAINERS
 ------------*/
 
+section {
+    padding: 1.875rem 0;
+}
+
 .container{
     max-width: 71.25rem;
     padding-left: 1.25rem;
@@ -16,13 +20,21 @@
     margin: auto;
 }
 
-.section-container{
+/* .section-container{
     width: 100%;
-}
+} */
 
 /*-----------
     FLEX
 ------------*/
+
+.column{
+    flex-direction: column;
+}
+
+.justify-content{
+    justify-content: center;
+}
 
 .flex-box{
     display: flex;
@@ -32,21 +44,62 @@
     justify-content: space-between;
 }
 
+.align-items-end {
+    align-items: flex-end;
+}
+.align-items-center {
+    align-items: center;
+}
+
 .row{
     display: flex;
     flex-wrap: wrap;
-    padding: 0 -1.25rem;
+    margin-left: -0.625rem;
+    margin-right: -0.625rem;
 }
 
 .col{
-    padding: 0 1.25rem;
-}
-
-.col-2{
-    padding: 1.25rem 0;
     width: 100%;
+    padding-left: .625rem;
+    padding-right: .625rem;
+    margin: .625rem 0;
 }
 
 section:nth-child(even){
     background-color: #9792e4;
+}
+
+/*---------
+    CARD
+----------*/
+
+.card {
+    border-radius: .625rem;
+    padding: 1.25rem;
+    background-color: #fff;
+}
+
+.card-2 {
+    border-radius: 1.25rem;
+    padding: 1.25rem;
+    background-color: #fff;
+}
+
+/*---------
+    TEXT
+----------*/
+
+.text-center {
+    text-align: center;
+}
+
+/*---------
+    BORDER
+----------*/
+
+.border-radius-40 {
+    border-radius: 2.5rem;
+}
+.border-radius-circle {
+    border-radius: 50%;
 }
