Schifoso ma finito al 98%

--- a/css/header.css
+++ b/css/header.css
@@ -10,9 +10,15 @@ header{
     top: 0;
 }
 
+
 /* --------------
     RESPONSIVE
 -----------------*/
+
+
+.logo img{
+    width: 3.75rem
+}
 
 .header-nav{
     display: none;
